--- a/src/popup.html
+++ b/src/popup.html
@@ -19,7 +19,7 @@
 				<img src="/img/ets2mp.com.png">
 				TruckersMP
 			</a>
-			<a class="ui image mini label" data-href="https://bigmp.ru" href="#">
+			<a class="ui image mini label" data-href="https://help.bigmp.ru" href="#">
 				<img src="/img/bigmp.ru.png">
 				<span data-resource="options_HelperLink">Helper</span>
 			</a>
