--- a/src/options.html
+++ b/src/options.html
@@ -30,7 +30,7 @@
 		<div class="inline field" id="server_choose" style="display:none;">
 			<label data-resource="optLabelServer"></label>
 			<select id="servers" class="ui search disabled loading dropdown">
-				<option data-resource="optLoadingScreen">Loading..</option>
+				<option data-resource="optLoadingScreen">Loading...</option>
 			</select>
 		</div>
 
@@ -62,22 +62,6 @@
 			<span data-resource="optSaveButton"></span>
 		</div>
 
-        <div class="ui divider"></div>
-
-        <center>
-            <a class="ui image mini label" data-href="http://forum.ets2mp.com/index.php?/topic/11641-sapi-extension-for-browsers/" href="#">
-                <img src="/img/ets2mp.com.png">
-                TruckersMP
-            </a>
-            <a class="ui image mini label" data-href="https://help.bigmp.ru" href="#">
-                <img src="/img/bigmp.ru.png">
-                <span data-resource="options_HelperLink">Helper</span>
-            </a>
-            <a class="ui image mini label" data-href="https://github.com/cjmaxik/SaPi-Reborn">
-                <img src="/img/github.png">
-                GitHub
-            </a>
-        </center>
 	</div>
 
 	<script type="text/javascript" src="/js/jquery-2.1.3.min.js"></script>
