--- a/src/popup.html
+++ b/src/popup.html
@@ -15,7 +15,7 @@
     	<!-- <div class="ui divider"></div> -->
         <br>
 		<center>
-	    	<a class="ui image mini label" data-href="http://forum.ets2mp.com/index.php?/topic/11641-sapi-extension-for-browsers/" href="#">
+	    	<a class="ui image mini label" data-href="https://forum.truckersmp.com/index.php?/topic/38473-sapi-reborn-servers-and-players-info/" href="#">
 				<img src="/img/ets2mp.com.png">
 				TruckersMP
 			</a>
