--- a/src/popup.html
+++ b/src/popup.html
@@ -11,10 +11,30 @@
     </head>
     <body id="popup">
     	<a class="ui top right attached label" href="#" id="go_to_options" data-resource="options_OptionsLink"></a>
-        <div id="main"></div>
-    	<!-- <div class="ui divider"></div> -->
+        <center>
+            <div id="version">
+                <div class="ui divided selection list">
+                  <a class="item">
+                    MP:
+                    <div class="ui horizontal label" id="mp">Hmmm...</div>
+                  </a>
+<!--                   <a class="item">
+                    L:
+                    <div class="ui horizontal label" id="launcher">Candy</div>
+                  </a> -->
+                  <a class="item">
+                    ETS2 <div class="ui horizontal label" id="ets2">Hmmm...</div>
+                    ATS: <div class="ui horizontal label" id="ats">Hmmm...</div>
+                  </a>
+                </div>
+            </div>
+        </center>
+
         <br>
-		<center>
+        <div id="main"></div>
+
+        <center>
+            <br>
 	    	<a class="ui image mini label" data-href="https://forum.truckersmp.com/index.php?/topic/38473-sapi-reborn-servers-and-players-info/" href="#">
 				<img src="/img/ets2mp.com.png">
 				TruckersMP
